tried out the knn algorithm

--- a/Templates/homepage.html
+++ b/Templates/homepage.html
@@ -24,7 +24,7 @@
 <button id= 'pic1'>Change Picture </button>
 
 <script type="text/javascript"> 
-	const button1 = document.querySelector('pic1');
+	const button1 = document.querySelector('#hse2');
 
 	function picChange(){
 		document.querySelector('#hse2').src ='static/home2.jpeg';                                           
