changed Temp to tempand stat to sta

--- a/static/styles.css
+++ b/static/styles.css
@@ -19,3 +19,7 @@
  .c2 {
  	text-align: center;
  }
+
+
+
+ /*2007.0,1.0,2.0,2.0,0.0,1311.0,1694.0,206.0,0.0,1.0,0.0,1.0,1.0,10748.0,311217.0,0.0,1.0,0.0,0.0,0.0,0.0,0.0,1.0*/
