--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -26,11 +26,12 @@
 <script type="text/javascript"> 
 	const button1 = document.querySelector('#hse2');
 
-	function picChange(){
-		document.querySelector('#hse2').src ='static/home2.jpeg';                                           
-	}
+function picChange(){
+    
+	document.querySelector('#hse2').src ='static/home2.jpeg'                                         
+}
 
-	button1.addEventListener('click',picChange);
+button1.addEventListener('click',picChange);
 
 
 </script>
