cookies modified valuable name

--- a/templates/home_value.html
+++ b/templates/home_value.html
@@ -15,7 +15,7 @@
 
 	
 		<p>Thank you for the information</p>
-		<b> Your House's approximate value  is  USD {{predicted }}</b>> 
+		<b> Your House's approximate value  is  USD {{predicted }} </b> 
 	
 	
 		
