--- a/templates/home_info.html
+++ b/templates/home_info.html
@@ -29,14 +29,14 @@
 		
 		{% for feature in features[9:15] %}
 		
-		<input type="radio" name= {{feature}}> {{feature}}  <br/> <br/>
+		<input type="radio" name= {{feature}} value={{values.get(feature)}}> {{feature}}  <br/> <br/>
 		{% endfor %}
 
 		<h3> Please select one city </h3>
 		
 		{% for feature in features[15:] %}
 		
-		<input type="checkbox" name= {{feature}}> {{feature}}  <br/> <br/>
+		<input type="checkbox" name= {{feature}} value={{values.get(feature)}} > {{feature}}  <br/> <br/>
 		{% endfor %}
 		<br/> <br/>
 		<input type="submit" value="Please SUBMIT FORM">
