added chart and jquery head scripts

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,12 @@
 	<meta name="author" content="Claire Muwanguzi">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+   <link rel="stylesheet" href="static/styles.css">
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
+
 
     {% block head %}
 
