added navigation bar,live chat,and empty stat page, and contacts

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
 
 
+
     {% block head %}
 
     <title> Housing App </title>
@@ -25,8 +26,28 @@
    
   
 </head>
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5c6f3fda3341d22d9ce5819e/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 <body>
+<div class="topnav">
+  <a class="active" href="/">Home</a>
+  <a href="/statistics">Statistics </a>
+  <a href="#contact">Contact</a>
+  <a href="#chat">Live Chat </a>
+  
+</div>
+
 	
 	{% block content %}
 	<header style="color: green"> House for cash </header>
