--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,6 +12,15 @@
 
 
 {% block content %}
+<div class="topnav">
+  <a class="active" href="#home"></a>
+  <a href="/statistics"></a>
+  <a href="#contact"></a>
+  <a href="#chat"> </a>
+  
+</div>
+
+
 <h1 class="c1"> LOC-VALUATE YOUR HOME </h1>
 <h2 style="color: green" class="c1">Kanakulya REALTY </h2>
 
