--- a/static/styles.css
+++ b/static/styles.css
@@ -20,6 +20,35 @@
  	text-align: center;
  }
 
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
 
- /*2007.0,1.0,2.0,2.0,0.0,1311.0,1694.0,206.0,0.0,1.0,0.0,1.0,1.0,10748.0,311217.0,0.0,1.0,0.0,0.0,0.0,0.0,0.0,1.0*/
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #4CAF50;
+  color: green;
+}0.0,1311.0,1694.0,206.0,0.0,1.0,0.0,1.0,1.0,10748.0,311217.0,0.0,1.0,0.0,0.0,0.0,0.0,0.0,1.0*/
