--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -16,7 +16,8 @@
         <p>Thank you visiting </p>
         <b> put a visial below </b> 
     
-    
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="static/stats.js"></script>
         
     
 
