--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
 
 
 
