added city abd user table

--- a/templates/home_value.html
+++ b/templates/home_value.html
@@ -19,7 +19,7 @@
 	
 		<h2 class="c1">Thank you </h2> <br>
         <br>
-		<h1 class="c1"> Your House's approximate value  is  USD {{predicted }} </h1> 
+		<h1 class="c1"> Your House's approximate value in {{chosen_city}} is  USD {{predicted }} </h1> 
 
         <h3 class="c1"> below is a scatter plot showing how total square feet of a house affects price.</h3>
 
