--- a/templates/home_info.html
+++ b/templates/home_info.html
@@ -31,12 +31,13 @@
 		
 		<input type="radio" name= {{feature}} value={{values.get(feature)}}> {{feature}}  <br/> <br/>
 		{% endfor %}
+		<input type="reset" value="Reset Values">
 
 		<h3> Please select one city </h3>
 		
 		{% for feature in features[15:] %}
 		
-		<input type="checkbox" name= {{feature}} value={{values.get(feature)}} > {{feature}}  <br/> <br/>
+		<input type="radio" name= {{feature}} value={{values.get(feature)}} > {{feature}}  <br/> <br/>
 		{% endfor %}
 		<br/> <br/>
 		<input type="submit" value="Please SUBMIT FORM">
