--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -31,6 +31,14 @@
     <div id="scatterLegend" class="chart-legend"></div>
   </div>
 
+<div class="bedAvg">
+    <canvas id="bedBarChart"></canvas>
+    <div id="bedLegend" class="chart-legend"></div>
+  </div>
+
+
+<script type="static/graphs.js"></script>
+
 
 
 <script type="text/javascript">
