--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@ s0.parentNode.insertBefore(s1,s0);
   <a class="active" href="/">Home</a>
   <a href="/statistics">Statistics </a>
   <a id="contact"  href="#contact">Contact</a>
+  <a id="Charts"  href="#Charts">Charts</a>
   <a href="#chat">Live Chat </a>
   
 </div>
