--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,6 +16,7 @@
   <a class="active" href="#home"></a>
   <a href="/statistics"></a>
   <a href="#contact"></a>
+  <a id="Charts" </a>
   <a href="#chat"> </a>
   
 </div>
@@ -40,7 +41,7 @@
 
 function picChange(){
 
-    	document.querySelector('#hse2').src ='static/home2.jpeg';                                      
+    	document.querySelector('#hse2').src ='static/home3.jpeg';                                      
 }
 
 button1.addEventListener('click' , picChange);
