--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -37,7 +37,27 @@
   </div>
 
 
-<script type="static/graphs.js"></script>
+
+<script type="text/javascript" src="/static/graphs.js"></script>
+
+<script type="text/javascript">
+
+  let bedBar = $("#bedBarChart").get(0).getContext("2d");
+
+    $.get("/mean_price_bed.json", function (data) {
+      let myBarChart = new Chart(ctx_donut, {
+                                              type: 'bar',
+                                              data: data,
+                                              options: options
+                                            });
+      $('#bedLegend').html(myBarChart.generateLegend());
+    });
+
+
+</script>
+
+
+
 
 
 
