--- a/templates/charts.html
+++ b/templates/charts.html
@@ -11,12 +11,17 @@
 
 
 {% block content %}
+<br><br><br>
+
+<h1 class='c1'> Charts coming soon !!! </h1>
 <div id='layout'>
     <!-- <h2>Bar chart example</h2> -->
     <div id='container'>
-      <svg />
+      <svg width='800', height ='600'></svg>
     </div>
   </div>
+
+<div id="chart"></div>
 
  <script type="text/javascript" src="/static/d3.js"></script>       
 
