--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,17 @@ s0.parentNode.insertBefore(s1,s0);
   <a class="active" href="/">Home</a>
   <a href="/statistics">Statistics </a>
   <a id="contact"  href="#contact">Contact</a>
-  <a id="Charts"  href="#Charts">Charts</a>
+  <div class="dropdown">
+    <button class="dropbtn">Dropdown 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+  <a href= "/charts"> Charts</a>
   <a href="#chat">Live Chat </a>
   
 </div>
