--- a/templates/charts.html
+++ b/templates/charts.html
@@ -13,6 +13,11 @@
 {% block content %}
 <br><br><br>
 
+<div class="bedAvg">
+    <canvas id="bedBarChart"></canvas>
+    <div id="bedLegend" class="chart-legend"></div>
+</div>
+
 <h1 class='c1'> Charts coming soon !!! </h1>
 <div id='layout'>
     <!-- <h2>Bar chart example</h2> -->
@@ -23,7 +28,8 @@
 
 <div id="chart"></div>
 
- <script type="text/javascript" src="/static/d3.js"></script>       
+<!--  <script type="text/javascript" src="/static/d3.js"></script -->>  
+ <script type="text/javascript" src="static/graphs.js"></script>     
 
 
 
