added options to charts

--- a/templates/home_info.html
+++ b/templates/home_info.html
@@ -37,7 +37,7 @@
 		<br> <br>
 		{% for feature in features[15:] %}
 		
-		<input type="radio" name= {{feature}} class="c1" value={{values.get(feature)}}> {{feature}}  <br/> <br/>
+		<input type="checkbox" name= {{feature}} class="c1" value={{values.get(feature)}}> {{feature}}  <br/> <br/>
 		{% endfor %}
 
 
