--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,7 +6,7 @@
 {% block head %}
 
 <title> My homepage </title>
-<meta name="description" content="Hoome page">
+<meta name="description" content="Home page">
 
 {% endblock %}
 
@@ -23,12 +23,18 @@
 
 
 <h1 class="c1"> LOC-VALUATE YOUR HOME </h1>
-<h2 style="color: green" class="c1">Kanakulya REALTY </h2>
+<h2 style="color: green" class="c1">Kana REALTY </h2>
 
-<img src="static/home4.jpeg" id="hse2" class="center">
 
-<h2  style ="color: green" class="c1"> What is the VALUE of your home? </h2>
 
+<img src="static/home3.jpeg" id="hse2" class="center">
+
+<h2  style ="color: green" class="c1"> Estimate the value of your home in </h2>
+<a href="/home-info"> <h4 class="c2"  style ="color: green">  Erinville,Canada </h4> </a>
+<a href="/home-info"> <h4 class="c2"  style ="color: green"> Andrea Land,Oaklahoma </h4> </a>
+<a href="/home-info"> <h4 class="c2"  style ="color: green"> East Lucas,Iowa </h4> </a>
+<a href="/home-info"> <h4 class="c2"  style ="color: green"> Sara ann,W.Virginia </h4> </a>
+<a href="/home-info"> <h4 class="c2"  style ="color: green"> Jonathan Borough, Delaware! </h4> </a>
 <a href="/home-info"> <h4 class="c2"  style ="color: green"> START HERE ! </h4> </a>
 
 <button id= 'pic1'>Change Picture </button>
@@ -41,7 +47,7 @@
 
 function picChange(){
 
-    	document.querySelector('#hse2').src ='static/home3.jpeg';                                      
+    	document.querySelector('#hse2').src ='static/home4.jpeg';                                      
 }
 
 button1.addEventListener('click' , picChange);
