added bootstrap cdn

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-   <link rel="stylesheet" href="static/styles.css">
+   <link rel="stylesheet" href="">
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.js"></script>
@@ -50,9 +50,9 @@ s0.parentNode.insertBefore(s1,s0);
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="/statistics">Link 1</a>
+      <a href="/charts">Link 2</a>
+      <a href="charts">Link 3</a>
     </div>
   </div>
   <a href= "/charts"> Charts</a>
@@ -85,6 +85,8 @@ contact.addEventListener('click' , show_contact);
 
 	{% endblock %}
 
-
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
