--- a/templates/base.html
+++ b/templates/base.html
@@ -41,24 +41,32 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 <body>
-<div class="topnav">
-  <a class="active" href="/">Home</a>
-  <a href="/statistics">Statistics </a>
-  <a id="contact"  href="#contact">Contact</a>
-  <div class="dropdown">
-    <button class="dropbtn">Dropdown 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="/statistics">Link 1</a>
-      <a href="/charts">Link 2</a>
-      <a href="charts">Link 3</a>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">Kana Realty </a>
     </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="/">Home</a></li>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="/statistics">Statistics
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="/charts"> Popularity </a></li>
+          <li><a href="/charts"> Average Sales </a></li>
+          <li><a href="/statistics">Price relations</a></li>
+        </ul>
+      </li>
+      <button class="btn btn-danger navbar-btn">Our Contact</button>
+      <li><a href="#">Contacts</a></li>
+      <li><a href="#">Live chat </a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="/loginfo"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
   </div>
-  <a href= "/charts"> Charts</a>
-  <a href="#chat">Live Chat </a>
-  
-</div>
+</nav>
 
 <script type="text/javascript"> 
 "use strict";
