--- a/templates/base.html
+++ b/templates/base.html
@@ -52,9 +52,9 @@ s0.parentNode.insertBefore(s1,s0);
         <a class="dropdown-toggle" data-toggle="dropdown" href="/statistics">Statistics
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="/charts"> Popularity </a></li>
-          <li><a href="/charts"> Average Sales </a></li>
-          <li><a href="/statistics">Price relations</a></li>
+          <li><a href="/pop"> Popularity </a></li>
+          <li><a href="/avg_price"> Average prices </a></li>
+          <li><a href="/relations">Price relations</a></li>
         </ul>
       </li>
       <button class="btn btn-danger navbar-btn">Our Contact</button>
