judith help with graph route

--- a/templates/charts.html
+++ b/templates/charts.html
@@ -13,21 +13,19 @@
 {% block content %}
 <br><br><br>
 
-<div class="bedAvg">
-    <canvas id="bedBarChart"></canvas>
-    <div id="bedLegend" class="chart-legend"></div>
+<div class="bars">
+    <canvas id="avbeds"></canvas>
+    <div id="idbedLegend" class="chart-legend"></div>
 </div>
 
-<h1 class='c1'> Charts coming soon !!! </h1>
-
-<div id='layout'>
-    <!-- <h2>Bar chart example</h2> -->
-    <div id='container'>
-      <svg width='800', height ='600'></svg>
-    </div>
-  </div>
-
-<div id="chart"></div>
+<div class="bars">
+    <canvas id="avbaths"></canvas>
+    <div id="idbathsLegend" class="chart-legend"></div>
+</div>
+<div class="bars">
+    <canvas id="Sqrft"></canvas>
+    <div id="sfLegend" class="chart-legend"></div>
+</div>
 
 <!--  <script type="text/javascript" src="/static/d3.js"></script -->>  
  <script type="text/javascript" src="static/graphs.js"></script>     
