--- a/templates/home_value.html
+++ b/templates/home_value.html
@@ -25,15 +25,44 @@
 
 
 
+<div class="pie">
+    <canvas id="garage"></canvas>
+    <div id="grgLegend" class="chart-legend"></div>
+</div>
+
+
+
+<div class="bar">
+    <canvas id="baths"></canvas>
+    <div id="bathLegend" class="chart-legend"></div>
+</div>
+
+<div class="pie">
+    <canvas id="pool"></canvas>
+    <div id="poolLegend" class="chart-legend"></div>
+</div>
+
+
+
+<div class="bars">
+    <canvas id="beds"></canvas>
+    <div id="bedLegend" class="chart-legend"></div>
+</div>
+
+
+
+
 <div class="priceSqft">
     <canvas id="scatter1"></canvas>
     <div id="scatterLegend" class="chart-legend"></div>
   </div>
 
 
-	
-<script src="static/sqFt.js"></script> 	
-		
+
+<!-- The has pool code  -->
+
+<script type="text/javascript" src="static/sqFt.js">
+   
 	
 
 
