--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -21,21 +21,51 @@
   
 </div>
 
+
 <br><br>
 <h1 class="c1"> LOC-VALUATE YOUR HOME </h1>
-<h2 style="color: green" class="c1">Kana REALTY </h2>
 
-
-
-<img src="static/home3.jpeg" id="hse2" class="center">
-
-<h2  style ="color: green" class="c1"> Estimate the value of your home in </h2>
-<a href="/home-info"> <h4 class="c2"  style ="color: green">  Erinville,Canada </h4> </a>
-<a href="/home-info"> <h4 class="c2"  style ="color: green"> Andrea Land,Oaklahoma </h4> </a>
-<a href="/home-info"> <h4 class="c2"  style ="color: green"> East Lucas,Iowa </h4> </a>
-<a href="/home-info"> <h4 class="c2"  style ="color: green"> Sara ann,W.Virginia </h4> </a>
-<a href="/home-info"> <h4 class="c2"  style ="color: green"> Jonathan Borough, Delaware! </h4> </a>
-<a href="/home-info"> <h4 class="c2"  style ="color: green"> START HERE ! </h4> </a>
+<div id="main-content" style="
+    border: solid black;
+    width: 90%;
+    left: 10%;
+    margin: auto;
+    overflow: auto;
+    border-radius: 5px;
+    margin-top: 19px;
+    padding: 2%;
+">
+    <div id="main-images" style="
+    border: solid black;
+    width: 60%;
+    float: left;
+    margin: auto;
+    border-radius: 5px;
+">
+    	<img src="static/home.jpeg" id="hse2" class="center" style="width: 100%">         
+	</div>
+    
+    <div style="
+    border: solid black;
+    width: 30%;
+    float: right;
+    margin: auto;
+    border-radius: 5px;
+">
+        <span>Locations</span>
+        <ul style="
+    list-style-type: none;
+">
+            <li><a href="/home-info"> <h6 class="c2">  Erinville,Canada </h6> </a></li>
+            <li><a href="/home-info"> <h6 class="c2"> Andrea Land,Oaklahoma </h6> </a></li>
+            <li><a href="/home-info"> <h6 class="c2"> East Lucas,Iowa </h6> </a></li>
+            <li><a href="/home-info"> <h6 class="c2"> Sara ann,W.Virginia </h6> </a></li>
+            <li><a href="/home-info"> <h6 class="c2"> Jonathan Borough, Delaware! </h6></a></li> 
+            <li><a href="/home-info"> <h6 class="c2"> START HERE ! </h6> </a></li>
+        </ul>
+    </div>
+       
+</div>
 
 <button id= 'pic1'>Change Picture </button>
 
