css added to templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@ s0.parentNode.insertBefore(s1,s0);
   </div>
 </nav>
 
-<script type="text/javascript"> 
+<!-- <script type="text/javascript"> 
 "use strict";
 //this is javascript code
 
@@ -82,7 +82,7 @@ function show_contact(){
 contact.addEventListener('click' , show_contact);
 
 
-</script>
+</script> -->
 
 	
 	{% block content %}
