--- a/templates/home_info.html
+++ b/templates/home_info.html
@@ -13,75 +13,74 @@
 {% block content %}
 
 
+	<div class="home">
+		<span class="message">Loc valuate your home</span>
+	</div>
 
 
 
 
-<div id ='c3' style="
-style="
-    border: solid black;
-    width: 90%;
-    left: 10%;
-    margin: auto;
-    overflow: auto;
-    border-radius: 5px;
-    margin-top: 19px;
-    padding: 2%;">
-    
-	<form action= "/sht_value">
-		<div id="numbers"> 
-		<h2> Please Provide the following infomation </h2>
-		<h3> You can type your input or scroll through </h3>
-		<input type="number" name="{{features[0]}}" min="1850" value={{values.get(features[0])}}>{{features[0]}}
-		<br> <br>
-		{% for feature in features[1:9] %}
-		
-		<input type="number" name= "{{feature}}" min="0" class="c1" value={{values.get(feature)}}> {{feature}}  <br/> <br/>
-		{% endfor %}
+
+	<form action= "/sht_value" >
+			
+
+		<div class="homeinfo">
+
+		<div id="numbers" class="homeinfokids"> 
+			<h4> You can type your input </h4>
+			<input type="number" name="{{features[0]}}" min="1850" class="c1" value={{values.get(features[0])}}> {{features[0]}}
+			<br> 
+			{% for feature in features[1:9] %}
+			
+			<input type="number" name= "{{feature}}" min="0" class="c1" value={{values.get(feature)}}> {{feature}}  <br/> 
+			{% endfor %}
 		</div >
+
+
 		{#
 			select all that apply(this is a comment)
 			#}
-			<div id="radio">
+		<div id="radio" class="homeinfokids">
 
-		<h3> Please select all that apply </h3>
+
+			<h4> Please select all that apply </h4>
+			
+			{% for feature in features[9:15] %}
+			
+			
+			<input type="radio" name = "{{feature}}" value ={{values.get(feature)}}> {{feature}}  <br/> <br/> 
+			{% endfor %}
+
+		</div>
+
+		<div id="city" class="homeinfokids">
 		
-		{% for feature in features[9:15] %}
-		
-		
-		<input type="radio" name = "{{feature}}" value ={{values.get(feature)}}> {{feature}}  <br/> <br/>
-		{% endfor %}
-
-			</div>
-
-			<div id="city">
-		
-		<h3> Please select one city </h3>
-		<br> <br>
-		{% for feature in features[15:] %}
-
-	
+			<h4> Please select one city </h4>
+			
+			{% for feature in features[15:] %}
 
 		
-		<input type="checkbox" name= "{{feature}}" class="c1" value={{values.get(feature)}}> {{feature}}  <br/> <br/>
-		{% endfor %}
 
-			</div>
+			
+			<input type="checkbox" name= "{{feature}}" class="c1" value={{values.get(feature)}}> {{feature}}  <br/> <br/>
+			{% endfor %}
 
+		</div>
+		<div class="homeinfokids btnsdiv">
 
-		<input type="submit" value="Please SUBMIT FORM"><br> <br>
+			<input type="submit" value="Please SUBMIT FORM">
 
-		<input type="reset" value="CLEAR FORM"> <br> <br>
+			<input type="reset" value="CLEAR FORM">
 
-		<input type="reset" value="Reset Values">
+			<input type="reset" value="Reset Values">
 
-	      </div>
+	    </div>
 
+     </div>
 
 
 	</form>
 	
-</div>
 
 {% endblock %}
 
