--- a/static/styles.css
+++ b/static/styles.css
@@ -12,8 +12,17 @@
 
  .c1 {
  	text-align: center;
-  color: green;
+  /*color: green;*/
+  font-size: 14px;
 
+ }
+
+ .heading {
+  text-align: center;
+  /*color: green;*/
+  display: block;
+  font-size: 20px;
+  margin: 65px 0 10px 0;
  }
 
  .c2 {
@@ -25,33 +34,72 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Add a black background color to the top navigation */
-.topnav {
-  background-color: #333;
-  overflow: hidden;
+.homeinfo{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 10px 10% 0 10%;
+  background-color: #f3f2f2;
+  border-radius: 15px;
+  padding: 10px;
+
 }
 
+.homeinfokids{
+  width: 30%;
+}
+
+.home {
+  background-image: linear-gradient(to top, rgba(0,0,0, 0.7),
+    rgba(0,0,0, 0)), url('home.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 390px;
+  position: relative;
+}
+
+.btnsdiv {
+  width: 90%;
+}
+
+.message {
+    position: absolute;
+    bottom: 3px;
+    display: block;
+    color: #b1b1b1;
+    left: 40%;
+    font-size: 16px;
+    text-transform: uppercase;
+}
+
+/* Add a black background color to the top navigation */
+/*.topnav {
+  background-color: #333;
+  overflow: hidden;
+}*/
+
 /* Style the links inside the navigation bar */
-.topnav a {
+/*.topnav a {
   float: left;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-}
+}*/
 
 /* Change the color of links on hover */
-.topnav a:hover {
+/*.topnav a:hover {
   background-color: #ddd;
   color: black;
-}
+}*/
 
 /* Add a color to the active/current link */
-.topnav a.active {
+/*.topnav a.active {
   background-color: #4CAF50;
   color: green;
-}
+}*/
 
 #body {
   margin: 10;
@@ -82,5 +130,23 @@ body {
   background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
   background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
 }
+
+.parent {
+  display: flex;
+  flex-wrap: wrap;
+  padding: auto;
+  justify-content: center;
+}
+
+.children {
+  display: block;
+  width: 40%;
+}
+
+.twocols {
+  width: 60%;
+}
+
+
 
 */ Color line credit to ninjamonk: [[http://bootsnipp.com/snippets/featured/mix-amp-match-login]]
